sumo/tests/duarouter/errors/no_input/errors.duarouter.exe
Error: No route input specified.
Quitting (on error).
